--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   carousel_pro: ^1.0.0
   transparent_image: ^1.0.0
   scoped_model: ^1.0.1
-
+  circle_wheel_scroll: ^0.0.1+1
   
 
 dev_dependencies:
@@ -44,11 +44,11 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
+  assets:
+   - assets/logo.png
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
