--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   circle_wheel_scroll: ^0.0.1+1
   path_provider: ^0.4.1
   url_launcher: ^3.0.3
+  http: ^0.12.0
   
 
 dev_dependencies:
