--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -32,6 +32,7 @@ dependencies:
   url_launcher: ^3.0.3
   http: ^0.12.0+1
   brasil_fields: ^0.0.7+2
+  validators: ^2.0.0
   
 
 dev_dependencies:
